gce/hello/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bobant/hello:2.0.0
        imagePullPolicy: Always
        name: hello
        ports:
        - containerPort: 80
