gce/hello/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: hello
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  # tls:
  # - hosts:
  #   replace <your_domain> with your registered fqdn
  #   - hello.<your_domain>
  #   secretName: hello-tls
  rules:
  - host: hello.<your_domain>
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
